fixed tooltip blur added magic gaps

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -33,8 +33,8 @@ button:hover {
 }
 
 tooltip {
-	border-radius: .25em;
-	background-color: @bg_main;
+	border: none;
+	background-color: alpha(black, 0.01);
 }
 tooltip label {
 	color: @fg_widget;
